# TARQ-Agent

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: async_example.py  chat.py  custom_tool.py  example.py  linear_example.py  non_linear_example.py  progressive_example.py  short_custom_tool.py  teams_example.py
hlr/: agent.py  node.py
hlr-agent/: __init__.py  agent.py  llm.py
hlr_agent/: __init__.py  agent.py  llm.py  node.py  teams.py
hlr_agent/c_layers/: C1.py
hlr_agent/c_layers/C0/: C0.py  graph.py  node.py
hlr_agent/config/: __init__.py  env_loader.py  llmPricing.json
hlr_agent/core/: __init__.py  orchestrator.py
hlr_agent/internal/: llm.py
hlr_agent/memory/: AgentMemory.py  TaskMemory.py  __init__.py
hlr_agent/tools/: __init__.py  internal_tools.py  tool.py
hlr_agent/utils/: __init__.py  cleaner.py  console.py  logger.py  tool_graph_builder.py
tarq_agent/: __init__.py  agent.py  teams.py
tarq_agent/config/: __init__.py  env_loader.py
tarq_agent/core/: __init__.py  delegation_manager.py  dsl_executor.py  dsl_parser.py  orchestrator.py
tarq_agent/internal/: llm.py
tarq_agent/memory/: TaskMemory.py
tarq_agent/rag/: __init__.py  rag_engine.py
tarq_agent/tools/: __init__.py  internal_tools.py  testWeb.py  tool.py  websearch.py
tarq_agent/utils/: __init__.py  console.py  error_codes.py  llm_utils.py  logger.py  pricing.py
