[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarq_agent"
version = "0.3.0"
description = "Temporal Async Reasoning & Queueing"
authors = [
    { name = "David Serrano", email = "davidsd.2704@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "openai",
    "google-genai"
]
[tool.poetry.dependencies]
python = ">=3.9,<3.14"

[project.urls]
"Homepage" = "https://github.com/DavidFraifer/TARQ-Agent"
